2017-01-31  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* README-dev: Correct typo.

2017-01-26  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* etc/rec-mode.el: Require tabulated-list.

2016-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS: Prepare release 1.8.

2016-10-18  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* etc/rec-mode.el (rec-mode): Fix typo and run the actual
	rec-mode-hook.

2016-10-05  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/rec-mode.el (rec-remove-continuation-line-marker-overlays):
	Fix setq typo.

2016-09-13  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/recutils.texi: "Latinajo" fixed.  Reported by Giovanni
	Ridolfi.

2016-06-21  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/ob-rec.el (org-babel-execute:rec): orb-babel switched to
	lexical-binding.  Define a result-params locally.

2015-11-02  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/rec-mode.el (rec-field-name-face): New face.
	(rec-keyword-face): Likewise.
	(rec-continuation-line-face): Likewise.
	(rec-font-lock-keywords): Use the rec-* faces.

2015-05-05  Jose E. Marchesi  <jemarch@gnu.org>

	src,torture: numeric results from aggregated functions are signed.
	* src/rec-aggregate.c (REC_AGGREGATE_ACCUM_FUNC): Numeric results
	from aggregated functions are signed.
	* torture/utils/recsel.sh (negative_fields): New test input file.
	(recsel-aggregate-sum-negative): New test.

2015-04-28  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/rec-mode.el (rec-cmd-compile): Quote the file name argument
	before to pass it to recfix in a shell.

2015-04-27  Jose E. Marchesi  <jemarch@gnu.org>

	* README: Copyright years updated.
	* utils/recutl.h: Likewise.
	* utils/recutl.c: Likewise.
	* utils/recset.c: Likewise.
	* utils/recsel.c: Likewise.
	* utils/recins.c: Likewise.
	* utils/recinf.c: Likewise.
	* utils/recfmt.c: Likewise.
	* utils/recfix.c: Likewise.
	* utils/recdel.c: Likewise.
	* utils/rec2csv.c: Likewise.
	* utils/mdb2rec.c: Likewise.
	* utils/Makefile.am: Likewise.