@@ -26,7 +26,7 @@ gnulib_modules="
   c-ctype extensions fwriting getdelim getopt gettext-h localcharset mbrlen
   mbrtowc mbsinit memchr mkostemp obstack pathmax regex rename selinux-h stdbool
   stat-macros ssize_t strerror strverscmp threadlib unlocked-io verify
-  version-etc-fsf wcrtomb wctob"
+  version-etc-fsf wcrtomb wctob tmpdir pathmax"
 
 checkout_only_file=
 MSGID_BUGS_ADDRESS=bug-gnu-utils@gnu.org
